--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "./node_modules/.bin/nodemon bin/www",
     "prd": "pm2 start bin/www",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "publish": ""
+    "publish": "node bin/publish pm2 start bin/www"
   },
   "dependencies": {
     "@pusher/chatkit-server": "^1.0.4",
