--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@pusher/chatkit-server": "^1.0.4",
     "debug": "^2.6.3",
+    "jsonwebtoken": "^8.5.0",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^3.5.1",
     "koa-logger": "^2.0.1",
     "koa-mysql-session": "0.0.2",
     "koa-onerror": "^1.2.1",
