--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "koa-views": "^5.2.1",
     "md5": "^2.2.1",
     "mysql": "^2.16.0",
-    "pug": "^2.0.0-rc.1"
+    "pug": "^2.0.0-rc.1",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
