--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-logger": "^2.0.1",
     "koa-mysql-session": "0.0.2",
     "koa-onerror": "^1.2.1",
+    "koa-route": "^3.2.0",
     "koa-router": "^7.1.1",
     "koa-session-minimal": "^3.0.4",
     "koa-static": "^3.0.0",
