--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "koa-websocket": "^5.0.1",
     "md5": "^2.2.1",
     "mysql": "^2.16.0",
+    "node-fetch": "^2.3.0",
     "pug": "^2.0.0-rc.1",
     "socket.io": "^2.2.0"
   },
